Added more LinkList code.
* Rename of the linkedList file to LinkList.h
* This includes a rename of the class as well
* update to .gitignore to ignore compiled files

--- a/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj.filters
+++ b/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj.filters
@@ -20,10 +20,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LinkedList.h">
+    <ClInclude Include="Includes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Includes.h">
+    <ClInclude Include="LinkList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
