--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,21 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+# ==============
+# Compiled Files
+# ==============
+*.pdb
+*.tlog
+*.lastbuildstate
+*.sdf
+*.opensdf
+*.log
+*.filters
+*.obj
+*.idb
+*.ilk
+*.exe
+
 # =========================
 # Operating System Files
 # =========================
@@ -26,8 +41,7 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
-
+Icon
 # Thumbnails
 ._*
 
