--- a/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj
+++ b/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj
@@ -68,7 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Includes.h" />
-    <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="LinkList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
