* Added file for Deque * Added file for Queue * Added file for Stack * Added implementation for AStack and LLStack using self built types * Some implementation of the AStack

--- a/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj
+++ b/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj
@@ -67,9 +67,12 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Deque.h" />
     <ClInclude Include="Includes.h" />
     <ClInclude Include="LinkList.h" />
     <ClInclude Include="OrderedArray.h" />
+    <ClInclude Include="Queue.h" />
+    <ClInclude Include="Stack.h" />
     <ClInclude Include="UnorderedArray.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
