--- a/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj.filters
+++ b/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj.filters
@@ -32,5 +32,14 @@
     <ClInclude Include="OrderedArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Stack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Queue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Deque.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
