--- a/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj.filters
+++ b/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Deque.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HashTable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
