--- a/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj
+++ b/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj
@@ -67,6 +67,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BinaryTree.h" />
     <ClInclude Include="Deque.h" />
     <ClInclude Include="HashTable.h" />
     <ClInclude Include="Includes.h" />
