- Moved NetMessage class to a head file as it is it's own type and should be decoupled from the queue class  - Deleted code for NetMessage class from Queue.h file

--- a/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj
+++ b/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="HashTable.h" />
     <ClInclude Include="Includes.h" />
     <ClInclude Include="LinkList.h" />
+    <ClInclude Include="NetMessage.h" />
     <ClInclude Include="OrderedArray.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
