--- a/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj.filters
+++ b/AlgorithmAnddatastructs/AlgorithmAnddatastructs.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="BinaryTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NetMessage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
